<resources>
    <string name="app_name">贴贴</string>
    <string name="group_switch_close_description">关闭转推组切换</string>
    <string name="image_viewer_description">推文大图</string>
    <string name="image_viewer_loading_description">推文大图（加载中）</string>
    <string name="twitteruser_avatar_description">推特用户头像</string>
    <string name="twittermedia_image_description">推文包含的图片</string>
    <string name="twittermedia_video_description">推文包含的视频（未播放）</string>
    <string name="webservice_description">贴贴的网络服务</string>
    <string name="save">保存</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="quoted">转推</string>
    <string name="reply">回复</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="detail">详情</string>
    <string name="original_tweet_copied">已复制原推文</string>
    <string name="original_tweet_and_translationCopied">已复制原推文及翻译</string>
    <string name="media_save">保存媒体</string>
    <string name="quick_save">快速保存</string>
    <string name="upload_translation">上传翻译</string>
    <string name="please_check_the_Internet">请检查网络连接</string>
    <string name="twitter_user">推特用户</string>
    <string name="my_group">我所在的组</string>
    <string name="copy_whole">复制全文</string>
    <string name="input_translation">输入翻译</string>
    <string name="copy_to_translation_layout">复制到翻译区</string>
    <string name="retweet_only">没有评论的转推</string>
    <string name="get_group_info_failed">获取组信息失败</string>
    <string name="login_failure">用户名为空或包含空格</string>
    <string name="share_image">分享图片</string>
    <string name="share_video">分享视频</string>
    <string name="server_image">https://cdn.cvbot.powerlayout.com/images/</string>
    <string name="server_video">https://cdn.cvbot.powerlayout.com/videos/</string>
    <string name="server_api">https://api.cvbot.powerlayout.com/</string>
</resources>