<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tweet_detail_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:clickable="true"
        app:cardBackgroundColor="?android:attr/colorBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/name_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="姓名"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/tweet_type_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="类型"
                            android:textSize="14sp"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tweet_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="19:19"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="这是一条Tweet"
                android:textColor="@color/colorBlack"
                android:visibility="visible"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/copy_to_input"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/copy_to_translation_layout"
                    android:textColor="@color/colorPrimary"
                    app:icon="@drawable/ic_baseline_file_copy_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/quick_save_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/media_save"
                    android:textColor="@color/colorPrimary"
                    app:icon="@drawable/ic_baseline_save_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/img_set_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/left_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/left_top_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/twittermedia_image_description"
                        android:scaleType="center"
                        android:src="@drawable/ic_baseline_image_24"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/left_bottom_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:scaleType="center"
                        android:src="@drawable/ic_baseline_image_24"
                        android:contentDescription="@string/twittermedia_image_description"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/right_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/right_top_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:scaleType="center"
                        android:src="@drawable/ic_baseline_image_24"
                        android:contentDescription="@string/twittermedia_image_description"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/right_bottom_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:scaleType="center"
                        android:src="@drawable/ic_baseline_image_24"
                        android:contentDescription="@string/twittermedia_image_description"
                        android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/video_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/video_background"
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:scaleType="centerCrop"
                    android:src="@color/colorBlack"
                    android:contentDescription="@string/twittermedia_video_description"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/video_not_loading_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    android:src="@drawable/ic_baseline_play_circle_filled_white_24"
                    android:contentDescription="@string/twittermedia_video_description"
                    android:visibility="gone"/>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/translation_text_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:hint="@string/input_translation"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/translation_edit_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:gravity="start"
                    android:inputType="textMultiLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/history_btn"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            app:icon="@drawable/ic_baseline_history_24" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/copy_text_btn"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/copy_whole"
                            android:textColor="@color/colorPrimary"
                            app:icon="@drawable/ic_baseline_format_align_left_24" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/upload_btn"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/upload_translation"
                            app:icon="@drawable/ic_baseline_cloud_upload_24" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_translations_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:visibility="gone"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>