<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tweet_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="?android:attr/colorBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp"
        android:transitionName="activityOption">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    android:scaleType="fitCenter"
                    android:background="@drawable/ic_baseline_image_24"
                    android:contentDescription="@string/twitteruser_avatar_description"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/name_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="姓名"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/tweet_type_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="类型"
                            android:textSize="14sp"
                            android:visibility="gone"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tweet_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="00:00"
                        android:textSize="14sp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/img_set_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/left_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/left_top_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        android:scaleType="center"
                        android:src="@drawable/ic_baseline_image_24"
                        android:visibility="gone"
                        android:contentDescription="@string/twittermedia_image_description"/>

                    <ImageView
                        android:id="@+id/left_bottom_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        android:scaleType="center"
                        android:src="@drawable/ic_baseline_image_24"
                        android:contentDescription="@string/twittermedia_image_description"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/right_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/right_top_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/twittermedia_image_description"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        android:scaleType="center"
                        android:src="@drawable/ic_baseline_image_24"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/right_bottom_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/twittermedia_image_description"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        android:scaleType="center"
                        android:src="@drawable/ic_baseline_image_24"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/video_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/video_background"
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/twittermedia_video_description"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@color/colorBlack"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/video_not_loading_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:contentDescription="@string/twittermedia_video_description"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    android:src="@drawable/ic_baseline_play_circle_filled_white_24"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:id="@+id/status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="这是一条Tweet"
                android:textColor="@color/colorBlack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/quick_save_btn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="快速保存"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>